# EnvProxy

./: .gitignore  build.gradle  httpServer.go
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rqg/envproxy/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/youzan/envproxy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ca-chain.cert.pem  ca.cert.pem  ca.key.pem  openssl  openssl.cnf  root.cert.pem  www.env2.com.key.pem  www.evn2.com.cert.pem
app/src/main/cpp/: BufferPool.cpp  BufferPool.h  CertManager.cpp  CertManager.h  libProxy.cpp  log.h  proxyEngine.cpp  proxyEngine.h  proxyTypes.cpp  proxyTypes.h  test.cpp  test.h  util.cpp  util.h
app/src/main/cpp/ip/: Ip4Handler.cpp  Ip4Handler.h  Ip6Handler.cpp  Ip6Handler.h  IpHandler.cpp  IpHandler.h  IpPackage.cpp  IpPackage.h  IpPackageFactory.cpp  IpPackageFactory.h  ip.cpp  ip.h  ip4.cpp  ip4.h  ip6.cpp  ip6.h
app/src/main/cpp/protocol/: Icmp.cpp  Icmp.h  IcmpHandler.cpp  IcmpHandler.h  Protocol.cpp  Protocol.h  ProtocolFactory.cpp  ProtocolFactory.h  ProtocolHandler.cpp  ProtocolHandler.h  Tcp.cpp  Tcp.h  TcpHandler.cpp  TcpHandler.h  Udp.cpp  Udp.h  UdpHandler.cpp  UdpHandler.h  icmp.cpp  icmp.h  protocol.cpp  protocol.h  tcp.cpp  tcp.h  udp.cpp  udp.h
app/src/main/cpp/session/: DnsSession.cpp  DnsSession.h  HttpSession.cpp  HttpSession.h  HttpsSession.cpp  HttpsSession.h  IcmpSession.cpp  IcmpSession.h  Session.cpp  Session.h  SessionFactory.cpp  SessionFactory.h  TcpSession.cpp  TcpSession.h  TlsSession.cpp  TlsSession.h  UdpSession.cpp  UdpSession.h  tls_server_name.cpp  tls_server_name.h
app/src/main/cpp/ssl/: genrsa.cpp  genrsa.h  req.cpp  reqConfig.h  ssl.h
app/src/main/cpp/task/: Task.cpp  Task.h  TaskDNS.cpp  TaskDNS.h  TaskFactory.cpp  TaskFactory.h  TaskHttp.cpp  TaskHttp.h  TaskHttps.cpp  TaskHttps.h  TaskICMP.cpp  TaskICMP.h  TaskTCP.cpp  TaskTCP.h  TaskUDP.cpp  TaskUDP.h
app/src/main/cpp/transport/: IcmpHandler.cpp  IcmpHandler.h  TcpHandler.cpp  TcpHandler.h  TransportFactory.cpp  TransportFactory.h  TransportHandler.cpp  TransportHandler.h  UdpHandler.cpp  UdpHandler.h
app/src/main/java/com/rqg/envproxy/: App.kt  AppListFragment.kt  BaseActivity.kt  MainActivity.kt  ProxyNative.java  ProxyService.kt  SSLCmd.kt  ServiceBus.kt  Utils.kt  VM.kt
app/src/main/java/com/youzan/envproxy/: MainActivity.kt  ProxyEngine.kt  ProxyNative.java  ProxyService.kt
app/src/main/res/drawable/: bg_dash.xml  bg_green_stroke.xml  bg_red_stroke.xml
app/src/main/res/layout/: activity_main.xml  fragment_app_list.xml  item_app_list.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/rqg/envproxy/: ExampleUnitTest.kt
app/src/test/java/com/youzan/envproxy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
openssl-1.1.1-pre5/: .gitignore  CHANGES  CHANGES.txt  Configure  INSTALL  NEWS  README.ECC  build.sh
openssl-1.1.1-pre5/apps/: dh1024.pem
openssl-1.1.1-pre5/crypto/err/: openssl.txt
openssl-1.1.1-pre5/crypto/objects/: objects.txt
openssl-1.1.1-pre5/demos/bio/: accept.cnf  connect.cnf
openssl-1.1.1-pre5/doc/man1/: ciphers.pod  ocsp.pod  openssl.pod  s_client.pod  s_server.pod  sess_id.pod  ts.pod
openssl-1.1.1-pre5/doc/man3/: BIO_ADDR.pod  BIO_ADDRINFO.pod  BIO_connect.pod  BIO_f_ssl.pod  DTLS_set_timer_cb.pod  DTLSv1_listen.pod  OCSP_resp_find_status.pod  RAND_egd.pod  SSL_CIPHER_get_name.pod  SSL_COMP_add_compression_method.pod  SSL_CONF_CTX_set1_prefix.pod  SSL_CONF_cmd.pod  SSL_CTX_dane_enable.pod  SSL_CTX_new.pod  SSL_CTX_set_alpn_select_cb.pod  SSL_CTX_set_client_hello_cb.pod  SSL_CTX_set_max_cert_list.pod  SSL_CTX_set_min_proto_version.pod  SSL_CTX_set_mode.pod  SSL_CTX_set_msg_callback.pod  SSL_CTX_set_options.pod  SSL_CTX_set_psk_client_callback.pod  SSL_CTX_set_timeout.pod  SSL_CTX_set_tlsext_use_srtp.pod  SSL_CTX_use_psk_identity_hint.pod  SSL_SESSION_get0_hostname.pod  SSL_SESSION_get_protocol_version.pod  SSL_accept.pod  SSL_alert_type_string.pod  SSL_connect.pod  SSL_do_handshake.pod  SSL_extension_supported.pod  SSL_get_ciphers.pod  SSL_get_client_random.pod  SSL_get_current_cipher.pod  SSL_get_default_timeout.pod  SSL_get_error.pod  SSL_get_peer_certificate.pod  SSL_get_version.pod  SSL_in_init.pod  (+3 more)
openssl-1.1.1-pre5/doc/man7/: ssl.pod
openssl-1.1.1-pre5/test/: README.ssltest.md  ssl_test_ctx_test.conf
openssl-1.1.1-pre5/test/recipes/: 70-test_sslrecords.t  70-test_sslversions.t  70-test_sslvertol.t  80-test_cipherbytes.t  80-test_cipherlist.t  80-test_ciphername.t  80-test_ssl_new.t  80-test_ssl_old.t  90-test_sslbuffers.t
openssl-1.1.1-pre5/test/ssl-tests/: 04-client_auth.conf.in
openssl/armeabi-v7a/include/openssl/: opensslconf.h
openssl/armeabi-v7a/lib/: libcrypto.so.1.1  libssl.so.1.1
openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl/armeabi/lib/pkgconfig/: libcrypto.pc  openssl.pc
